--- a/Experiment 02/A-47-WaterJug.ipynb
+++ b/Experiment 02/A-47-WaterJug.ipynb
@@ -20,35 +20,15 @@
       "Filling Water\n",
       "[7, 0]\n",
       "Transferring Water\n",
-      "[2, 5]\n",
+      "[5, 2]\n",
       "Emptying Water\n",
-      "[2, 0]\n",
+      "[5, 0]\n",
       "Transferring Water\n",
-      "[0, 2]\n",
-      "Filling Water\n",
-      "[7, 2]\n",
-      "Transferring Water\n",
-      "[4, 5]\n",
+      "[3, 2]\n",
       "Emptying Water\n",
-      "[4, 0]\n",
+      "[3, 0]\n",
       "Transferring Water\n",
-      "[0, 4]\n",
-      "Filling Water\n",
-      "[7, 4]\n",
-      "Transferring Water\n",
-      "[6, 5]\n",
-      "Emptying Water\n",
-      "[6, 0]\n",
-      "Transferring Water\n",
-      "[1, 5]\n",
-      "Emptying Water\n",
-      "[1, 0]\n",
-      "Transferring Water\n",
-      "[0, 1]\n",
-      "Filling Water\n",
-      "[7, 1]\n",
-      "Transferring Water\n",
-      "[3, 5] Solution Found\n"
+      "[1, 2] Solution Found\n"
      ]
     }
    ],
@@ -58,7 +38,7 @@
     "target = int(input())\n",
     "first, second = 0, 0\n",
     "states = [first, second]\n",
-    "if(cap_a < target or cap_b < target):\n",
+    "if(cap_a < target and cap_b < target):\n",
     "        print(\"solution not possible\")\n",
     "else:\n",
     "    for i in range(1):\n",
@@ -85,57 +65,6 @@
     "            \n",
     "        print([first, second], \"Solution Found\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def transfer():\n",
-    "    if second+first <= cap_b:\n",
-    "        second += first\n",
-    "        first = 0\n",
-    "        print(\"Transferring Water\")\n",
-    "    else:\n",
-    "        n = first+second-cap_b\n",
-    "        second = cap_b\n",
-    "        first = n\n",
-    "        print(\"Transferring Water\")\n",
-    "\n",
-    "\n",
-    "def fill():\n",
-    "    first = cap_a\n",
-    "    print(\"Filling Water\")\n",
-    "\n",
-    "\n",
-    "def empty():\n",
-    "    second = 0\n",
-    "    print(\"Emptying Water\")\n",
-    "\n",
-    "\n",
-    "cap_a = int(input())\n",
-    "cap_b = int(input())\n",
-    "target = int(input())\n",
-    "first, second = 0, 0\n",
-    "states = [first, second]\n",
-    "if (cap_a < target or cap_b < target):\n",
-    "    print(\"solution not possible\")\n",
-    "else:\n",
-    "    for i in range(1):\n",
-    "        while first != target and second != target:\n",
-    "            states = [first, second]\n",
-    "            print(states)\n",
-    "            if first != 0:\n",
-    "                if second < cap_b:\n",
-    "                    transfer()\n",
-    "                else:\n",
-    "                    fill()\n",
-    "            else:\n",
-    "                empty()\n",
-    "\n",
-    "        print([first, second], \"Solution Found\")\n"
-   ]
   }
  ],
  "metadata": {
@@ -154,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4,
   "vscode": {
