--- a/Experiment 03/A-47-BFS.ipynb
+++ b/Experiment 03/A-47-BFS.ipynb
@@ -10,80 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[(1, 3), (2, 2), (5, 5), (1, 3), (2, 2), (5, 5)], [(0, 3), (0, 3), (2, 1), (3, 6), (2, 1), (3, 6)], [(0, 2), (1, 1), (0, 2), (1, 1), (3, 3), (4, 4), (3, 3), (4, 4)], [(1, 6), (2, 3), (1, 6), (2, 3), (4, 3), (4, 3)], [(2, 4), (3, 3), (2, 4), (3, 3), (5, 2), (5, 2)], [(0, 5), (4, 2), (0, 5), (4, 2)]]\n",
-      "5 4 3 2 0 1 \n"
-     ]
-    }
-   ],
-   "source": [
-    "from queue import PriorityQueue\n",
-    "v = 6\n",
-    "graph = [[] for i in range(v)]\n",
-    "\n",
-    "\n",
-    "def addedge(x, y, cost):\n",
-    "    graph[x].append((y, cost))\n",
-    "    graph[y].append((x, cost))\n",
-    "\n",
-    "\n",
-    "def best_first_search(actual_Src, target, n):\n",
-    "    visited = [False] * n\n",
-    "    pq = PriorityQueue()\n",
-    "    pq.put((0, actual_Src))\n",
-    "    visited[actual_Src] = True\n",
-    "\n",
-    "    while pq.empty() == False:\n",
-    "        u = pq.get()[1]\n",
-    "        # Displaying the path having lowest cost\n",
-    "        print(u, end=\" \")\n",
-    "        if u == target:\n",
-    "            break\n",
-    "\n",
-    "        for v, c in graph[u]:\n",
-    "            if visited[v] == False:\n",
-    "                visited[v] = True\n",
-    "                pq.put((c, v))\n",
-    "    print()\n",
-    "\n",
-    "# def get_answer(src, dst, vertices):\n",
-    "\n",
-    "\n",
-    "addedge(0, 1, 3)\n",
-    "addedge(0, 2, 2)\n",
-    "addedge(0, 5, 5)\n",
-    "addedge(1, 0, 3)\n",
-    "addedge(1, 2, 1)\n",
-    "addedge(1, 3, 6)\n",
-    "addedge(2, 0, 2)\n",
-    "addedge(2, 1, 1)\n",
-    "addedge(2, 3, 3)\n",
-    "addedge(2, 4, 4)\n",
-    "addedge(3, 1, 6)\n",
-    "addedge(3, 2, 3)\n",
-    "addedge(3, 4, 3)\n",
-    "addedge(4, 2, 4)\n",
-    "addedge(4, 3, 3)\n",
-    "addedge(4, 5, 2)\n",
-    "addedge(5, 0, 5)\n",
-    "addedge(5, 4, 2)\n",
-    "source = 5\n",
-    "target = 1\n",
-    "\n",
-    "print(graph)\n",
-    "\n",
-    "best_first_search(source, target, v)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +60,126 @@
     "\n",
     "# Driver Code\n",
     "bfs(visited, graph, 'F')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "neighbours = {'B'}\n",
+      "new temp = ['A']\n",
+      "queue = [['A', 'B']]\n",
+      "\n",
+      "neighbours = {'C', 'A'}\n",
+      "new temp = ['A', 'B']\n",
+      "queue = [['A', 'B', 'C']]\n",
+      "\n",
+      "new temp = ['A', 'B']\n",
+      "queue = [['A', 'B', 'C'], ['A', 'B', 'A']]\n",
+      "\n",
+      "neighbours = {'I', 'B', 'D', 'H'}\n",
+      "new temp = ['A', 'B', 'C']\n",
+      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C']\n",
+      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'B']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C']\n",
+      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C']\n",
+      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H']]\n",
+      "\n",
+      "neighbours = {'C', 'J', 'K'}\n",
+      "new temp = ['A', 'B', 'C', 'I']\n",
+      "queue = [['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C', 'I']\n",
+      "queue = [['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C', 'I']\n",
+      "queue = [['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K']]\n",
+      "\n",
+      "neighbours = {'C', 'F', 'E', 'H'}\n",
+      "new temp = ['A', 'B', 'C', 'D']\n",
+      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C', 'D']\n",
+      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C', 'D']\n",
+      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C', 'D']\n",
+      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E'], ['A', 'B', 'C', 'D', 'H']]\n",
+      "\n",
+      "neighbours = {'C', 'G', 'D', 'L'}\n",
+      "new temp = ['A', 'B', 'C', 'H']\n",
+      "queue = [['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E'], ['A', 'B', 'C', 'D', 'H'], ['A', 'B', 'C', 'H', 'C']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C', 'H']\n",
+      "queue = [['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E'], ['A', 'B', 'C', 'D', 'H'], ['A', 'B', 'C', 'H', 'C'], ['A', 'B', 'C', 'H', 'G']]\n",
+      "\n",
+      "['A', 'B', 'C', 'H', 'G']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# imd_map = {\n",
+    "#     'A': ['B', 'C','F'],\n",
+    "#     'B': ['A','C', 'D'],\n",
+    "#     'C': ['A','B','D', 'E'],\n",
+    "#     'D': ['B','C','E'],\n",
+    "#     'E': ['C','D','F'],\n",
+    "#     'F': ['A','E']\n",
+    "# }\n",
+    "\n",
+    "imd_map = {'A':set(['B']),\n",
+    "        'B':set(['C','A']),\n",
+    "        'C':set(['H','B','I','D']),\n",
+    "        'D':set(['C','E','H','F']),\n",
+    "        'E':set(['D']),\n",
+    "        'F':set(['D','G']),\n",
+    "        'G':set(['F','H']),\n",
+    "        'H':set(['L','C','G','D']),\n",
+    "        'I':set(['C','J','K']),\n",
+    "        'J':set(['I']),\n",
+    "        'K':set(['L','I']),\n",
+    "        'L':set(['K','H'])}\n",
+    "\n",
+    "\n",
+    "def bfs_shortest_path(graph, src, goal):\n",
+    "    explored = []    \n",
+    "    queue = [[src]]    \n",
+    "    if src == goal:\n",
+    "        return \"You are already at the Destination point\"    \n",
+    "    while queue:        \n",
+    "        temp = queue.pop(0)        \n",
+    "        node = temp[-1]        \n",
+    "        if node not in explored:\n",
+    "            neighbours = graph[node]     \n",
+    "            print(\"neighbours = {}\".format(neighbours))        \n",
+    "            for neighbour in neighbours:\n",
+    "                new_temp = list(temp)  \n",
+    "                print(\"new temp = {}\".format(new_temp))\n",
+    "                new_temp.append(neighbour)  \n",
+    "                queue.append(new_temp)                  \n",
+    "                print(\"queue = {}\\n\".format(queue))\n",
+    "                if neighbour == goal:\n",
+    "                    return new_temp \n",
+    "\n",
+    "            explored.append(node)     \n",
+    "    return \"Sorry, the node you selected does not exist\"\n",
+    "\n",
+    "awal = input(\"Source Point: \")\n",
+    "tujuan = input(\"Destination Point: \")\n",
+    "\n",
+    "print(bfs_shortest_path(imd_map, awal, tujuan)) "
    ]
   },
   {
