--- a/Experiment 03/A-47-BFS.ipynb
+++ b/Experiment 03/A-47-BFS.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,51 +79,25 @@
       "new temp = ['A', 'B']\n",
       "queue = [['A', 'B', 'C']]\n",
       "\n",
-      "new temp = ['A', 'B']\n",
-      "queue = [['A', 'B', 'C'], ['A', 'B', 'A']]\n",
-      "\n",
-      "neighbours = {'I', 'B', 'D', 'H'}\n",
+      "neighbours = {'B', 'H', 'I', 'D'}\n",
       "new temp = ['A', 'B', 'C']\n",
-      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I']]\n",
+      "queue = [['A', 'B', 'C', 'H']]\n",
       "\n",
       "new temp = ['A', 'B', 'C']\n",
-      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'B']]\n",
+      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I']]\n",
       "\n",
       "new temp = ['A', 'B', 'C']\n",
-      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D']]\n",
+      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D']]\n",
       "\n",
-      "new temp = ['A', 'B', 'C']\n",
-      "queue = [['A', 'B', 'A'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H']]\n",
-      "\n",
-      "neighbours = {'C', 'J', 'K'}\n",
-      "new temp = ['A', 'B', 'C', 'I']\n",
-      "queue = [['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C']]\n",
-      "\n",
-      "new temp = ['A', 'B', 'C', 'I']\n",
-      "queue = [['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J']]\n",
-      "\n",
-      "new temp = ['A', 'B', 'C', 'I']\n",
-      "queue = [['A', 'B', 'C', 'B'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K']]\n",
-      "\n",
-      "neighbours = {'C', 'F', 'E', 'H'}\n",
-      "new temp = ['A', 'B', 'C', 'D']\n",
-      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C']]\n",
-      "\n",
-      "new temp = ['A', 'B', 'C', 'D']\n",
-      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F']]\n",
-      "\n",
-      "new temp = ['A', 'B', 'C', 'D']\n",
-      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E']]\n",
-      "\n",
-      "new temp = ['A', 'B', 'C', 'D']\n",
-      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E'], ['A', 'B', 'C', 'D', 'H']]\n",
-      "\n",
-      "neighbours = {'C', 'G', 'D', 'L'}\n",
+      "neighbours = {'L', 'C', 'D', 'G'}\n",
       "new temp = ['A', 'B', 'C', 'H']\n",
-      "queue = [['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E'], ['A', 'B', 'C', 'D', 'H'], ['A', 'B', 'C', 'H', 'C']]\n",
+      "queue = [['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H', 'L']]\n",
       "\n",
       "new temp = ['A', 'B', 'C', 'H']\n",
-      "queue = [['A', 'B', 'C', 'I', 'C'], ['A', 'B', 'C', 'I', 'J'], ['A', 'B', 'C', 'I', 'K'], ['A', 'B', 'C', 'D', 'C'], ['A', 'B', 'C', 'D', 'F'], ['A', 'B', 'C', 'D', 'E'], ['A', 'B', 'C', 'D', 'H'], ['A', 'B', 'C', 'H', 'C'], ['A', 'B', 'C', 'H', 'G']]\n",
+      "queue = [['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H', 'L'], ['A', 'B', 'C', 'H', 'D']]\n",
+      "\n",
+      "new temp = ['A', 'B', 'C', 'H']\n",
+      "queue = [['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H', 'L'], ['A', 'B', 'C', 'H', 'D'], ['A', 'B', 'C', 'H', 'G']]\n",
       "\n",
       "['A', 'B', 'C', 'H', 'G']\n"
      ]
@@ -165,13 +139,14 @@
     "            neighbours = graph[node]     \n",
     "            print(\"neighbours = {}\".format(neighbours))        \n",
     "            for neighbour in neighbours:\n",
-    "                new_temp = list(temp)  \n",
-    "                print(\"new temp = {}\".format(new_temp))\n",
-    "                new_temp.append(neighbour)  \n",
-    "                queue.append(new_temp)                  \n",
-    "                print(\"queue = {}\\n\".format(queue))\n",
-    "                if neighbour == goal:\n",
-    "                    return new_temp \n",
+    "                if neighbour not in explored:\n",
+    "                    new_temp = list(temp)  \n",
+    "                    print(\"new temp = {}\".format(new_temp))\n",
+    "                    new_temp.append(neighbour)  \n",
+    "                    queue.append(new_temp)                  \n",
+    "                    print(\"queue = {}\\n\".format(queue))\n",
+    "                    if neighbour == goal:\n",
+    "                        return new_temp \n",
     "\n",
     "            explored.append(node)     \n",
     "    return \"Sorry, the node you selected does not exist\"\n",
