--- a/Experiment 03/A-47-BFS.ipynb
+++ b/Experiment 03/A-47-BFS.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F A E B C D "
+      "F A B "
      ]
     }
    ],
@@ -40,11 +40,11 @@
     "#     'F': {'A': 5, 'E': 2},\n",
     "# }\n",
     "\n",
-    "visited = []  # List to keep track of visited nodes.\n",
-    "queue = []  # Initialize a queue\n",
+    "visited = []  \n",
+    "queue = []  \n",
     "\n",
     "\n",
-    "def bfs(visited, graph, node):\n",
+    "def bfs(visited, graph, node, goal):\n",
     "    visited.append(node)\n",
     "    queue.append(node)\n",
     "\n",
@@ -53,58 +53,68 @@
     "        print(s, end=\" \")\n",
     "\n",
     "        for neighbour in graph[s]:\n",
+    "            # print(neighbour, graph[s])\n",
     "            if neighbour not in visited:\n",
     "                visited.append(neighbour)\n",
     "                queue.append(neighbour)\n",
+    "            if neighbour == goal:\n",
+    "                print(neighbour, end=\" \")\n",
+    "                return;\n",
     "\n",
     "\n",
-    "# Driver Code\n",
-    "bfs(visited, graph, 'F')\n"
+    "inp_src = input(\"Source Point: \")\n",
+    "inp_dst = input(\"Destination Point: \")\n",
+    "bfs(visited, graph, inp_src, inp_dst)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "neighbours = {'B'}\n",
-      "new temp = ['A']\n",
-      "queue = [['A', 'B']]\n",
+      "neighbours = {'D', 'G'}\n",
+      "new temp = ['F']\n",
+      "queue = [['F', 'D']]\n",
       "\n",
-      "neighbours = {'C', 'A'}\n",
-      "new temp = ['A', 'B']\n",
-      "queue = [['A', 'B', 'C']]\n",
+      "new temp = ['F']\n",
+      "queue = [['F', 'D'], ['F', 'G']]\n",
       "\n",
-      "neighbours = {'B', 'H', 'I', 'D'}\n",
-      "new temp = ['A', 'B', 'C']\n",
-      "queue = [['A', 'B', 'C', 'H']]\n",
+      "neighbours = {'F', 'H', 'E', 'C'}\n",
+      "new temp = ['F', 'D']\n",
+      "queue = [['F', 'G'], ['F', 'D', 'H']]\n",
       "\n",
-      "new temp = ['A', 'B', 'C']\n",
-      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I']]\n",
+      "new temp = ['F', 'D']\n",
+      "queue = [['F', 'G'], ['F', 'D', 'H'], ['F', 'D', 'E']]\n",
       "\n",
-      "new temp = ['A', 'B', 'C']\n",
-      "queue = [['A', 'B', 'C', 'H'], ['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D']]\n",
+      "new temp = ['F', 'D']\n",
+      "queue = [['F', 'G'], ['F', 'D', 'H'], ['F', 'D', 'E'], ['F', 'D', 'C']]\n",
       "\n",
-      "neighbours = {'L', 'C', 'D', 'G'}\n",
-      "new temp = ['A', 'B', 'C', 'H']\n",
-      "queue = [['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H', 'L']]\n",
+      "neighbours = {'F', 'H'}\n",
+      "new temp = ['F', 'G']\n",
+      "queue = [['F', 'D', 'H'], ['F', 'D', 'E'], ['F', 'D', 'C'], ['F', 'G', 'H']]\n",
       "\n",
-      "new temp = ['A', 'B', 'C', 'H']\n",
-      "queue = [['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H', 'L'], ['A', 'B', 'C', 'H', 'D']]\n",
+      "neighbours = {'L', 'D', 'C', 'G'}\n",
+      "new temp = ['F', 'D', 'H']\n",
+      "queue = [['F', 'D', 'E'], ['F', 'D', 'C'], ['F', 'G', 'H'], ['F', 'D', 'H', 'L']]\n",
       "\n",
-      "new temp = ['A', 'B', 'C', 'H']\n",
-      "queue = [['A', 'B', 'C', 'I'], ['A', 'B', 'C', 'D'], ['A', 'B', 'C', 'H', 'L'], ['A', 'B', 'C', 'H', 'D'], ['A', 'B', 'C', 'H', 'G']]\n",
+      "new temp = ['F', 'D', 'H']\n",
+      "queue = [['F', 'D', 'E'], ['F', 'D', 'C'], ['F', 'G', 'H'], ['F', 'D', 'H', 'L'], ['F', 'D', 'H', 'C']]\n",
       "\n",
-      "['A', 'B', 'C', 'H', 'G']\n"
+      "neighbours = {'D'}\n",
+      "neighbours = {'B', 'I', 'H', 'D'}\n",
+      "new temp = ['F', 'D', 'C']\n",
+      "queue = [['F', 'G', 'H'], ['F', 'D', 'H', 'L'], ['F', 'D', 'H', 'C'], ['F', 'D', 'C', 'B']]\n",
+      "\n",
+      "['F', 'D', 'C', 'B']\n"
      ]
     }
    ],
    "source": [
-    "# imd_map = {\n",
+    "# ind_map = {\n",
     "#     'A': ['B', 'C','F'],\n",
     "#     'B': ['A','C', 'D'],\n",
     "#     'C': ['A','B','D', 'E'],\n",
@@ -113,7 +123,7 @@
     "#     'F': ['A','E']\n",
     "# }\n",
     "\n",
-    "imd_map = {'A':set(['B']),\n",
+    "ind_map = {'A':set(['B']),\n",
     "        'B':set(['C','A']),\n",
     "        'C':set(['H','B','I','D']),\n",
     "        'D':set(['C','E','H','F']),\n",
@@ -151,10 +161,10 @@
     "            explored.append(node)     \n",
     "    return \"Sorry, the node you selected does not exist\"\n",
     "\n",
-    "awal = input(\"Source Point: \")\n",
-    "tujuan = input(\"Destination Point: \")\n",
+    "inp_src = input(\"Source Point: \")\n",
+    "inp_dst = input(\"Destination Point: \")\n",
     "\n",
-    "print(bfs_shortest_path(imd_map, awal, tujuan)) "
+    "print(bfs_shortest_path(ind_map, inp_src, inp_dst)) "
    ]
   },
   {
