--- a/Experiment 04/A-47-Kush Munot-8-puz-prob.ipynb
+++ b/Experiment 04/A-47-Kush Munot-8-puz-prob.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,6 @@
     "        else:\n",
     "            return None\n",
     "            \n",
-    "\n",
     "    def copy(self,root):\n",
     "        temp = []\n",
     "        for i in root:\n",
@@ -60,9 +59,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the start state matrix \n",
+      "\n",
+      "Enter the goal state matrix \n",
+      "\n",
+      "Hueristic Function value is 3\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "1 2 3 \n",
+      "_ 4 6 \n",
+      "7 5 8 \n",
+      "Hueristic Function value is 3\n",
+      "Hueristic Function value is 2\n",
+      "Hueristic Function value is 4\n",
+      "Hueristic Function value is 4\n",
+      "\n",
+      "\n",
+      "\n",
+      "1 2 3 \n",
+      "4 _ 6 \n",
+      "7 5 8 \n",
+      "Hueristic Function value is 2\n",
+      "Hueristic Function value is 3\n",
+      "Hueristic Function value is 3\n",
+      "Hueristic Function value is 3\n",
+      "Hueristic Function value is 1\n",
+      "\n",
+      "\n",
+      "\n",
+      "1 2 3 \n",
+      "4 5 6 \n",
+      "7 _ 8 \n",
+      "Hueristic Function value is 1\n",
+      "Hueristic Function value is 2\n",
+      "Hueristic Function value is 0\n",
+      "Hueristic Function value is 2\n",
+      "\n",
+      "\n",
+      "\n",
+      "1 2 3 \n",
+      "4 5 6 \n",
+      "7 8 _ \n",
+      "Hueristic Function value is 0\n"
+     ]
+    }
+   ],
    "source": [
     "class Puzzle:\n",
     "    def __init__(self,size):\n",
@@ -86,6 +137,7 @@
     "            for j in range(0,self.n):\n",
     "                if start[i][j] != goal[i][j] and start[i][j] != '_':\n",
     "                    temp += 1\n",
+    "        print(\"Hueristic Function value is {}\".format(temp))\n",
     "        return temp\n",
     "        \n",
     "\n",
