--- a/Experiment 05/A-47-MinMax.ipynb
+++ b/Experiment 05/A-47-MinMax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,20 +26,17 @@
     "\t\n",
     "\t\tbest = MIN\n",
     "\n",
-    "\t\tfor i in range(0, 2):\n",
-    "\t\t\t\n",
-    "\t\t\tval = minimax(depth + 1, nodeIndex * 2 + i,\n",
-    "\t\t\t\t\t\tFalse, values, alpha, beta)\n",
+    "\t\tfor i in range(0, 2):\t\t\t\n",
+    "\t\t\tval = minimax(depth + 1, nodeIndex * 2 + i, False, values, alpha, beta)\n",
     "\t\t\tbest = max(best, val)\n",
     "\t\t\talpha = max(alpha, best)\n",
-    "            if beta <= alpha:\n",
+    "\t\t\tif beta <= alpha:\n",
     "\t\t\t\tbreak\n",
-    "\t\t\n",
     "\t\treturn best\n",
     "\t\n",
     "\telse:\n",
     "\t\tbest = MAX\n",
-    "        for i in range(0, 2):\n",
+    "\t\tfor i in range(0, 2):\n",
     "\t\t\n",
     "\t\t\tval = minimax(depth + 1, nodeIndex * 2 + i,\n",
     "\t\t\t\t\t\t\tTrue, values, alpha, beta)\n",
@@ -75,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
