:zap: changes done !!

--- a/Experiment 06/A-47-knn.ipynb
+++ b/Experiment 06/A-47-knn.ipynb
@@ -43,7 +43,7 @@
     "        points.append((num1, num2, \"-1\"))\n",
     "print(points)\n",
     "\n",
-    "def knn(points, input, k):\n",
+    "def knn_algorithm(points, input, k):\n",
     "    closest = []\n",
     "    for i in points:\n",
     "        x = (i[0]-input[0])**2\n",
@@ -72,7 +72,7 @@
     "input = (6,6)\n",
     "\n",
     "for i in range(1, 6):\n",
-    "    ans = knn(points, input, 5)\n",
+    "    ans = knn_algorithm(points, input, 5)\n",
     "    print(i, ans)\n"
    ]
   },
